* JDK8: Add generics, serialVersionID, for-each-loop, ...